--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
     "mongoose": "^5.5.4",
+    "mqtt": "^4.2.1",
     "nodemailer": "^6.4.11",
     "order-id": "^1.1.0",
     "passport": "^0.4.0",
